src/sass/utils/_cursor.scss
* {
  cursor: none;
}

body,
html {
  width: 100%;
  height: 100%;
}

.cursor {
  width: 30px;
  height: 30px;
  border: 1px solid black;
  transition: all 200ms ease-out;
  position: fixed;
  pointer-events: none;
  left: 0;
  top: 0;
  transform: translate(calc(-50% + 15px), -50%);
  z-index: 9999;
}

.cursor2 {
  z-index: 9999;
  width: 10px;
  height: 10px;
  background-color: black;
  opacity: 0.3;
  position: fixed;
  transform: translate(-50%, -50%);
  pointer-events: none;
  transition: width 0.3s, height 0.3s, background-color 0.3s;
}

.hover {
  background-color: #ff6b017d;
}

.cursorinnerhover {
  width: 50px;
  height: 50px;
  opacity: 0.5;
}

